<resources>
    <string name="app_name">FortuneCooking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_search">Search</string>
    <string name="nav_account">Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="simpan_resep_lezat_dan_dapatkan_konten_pribadimu">Simpan resep lezat dan dapatkan konten pribadimu</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bahan">Bahan</string>
    <string name="upload">Upload</string>
    <string name="input_video">Input Video</string>
    <string name="cr">Cover resep</string>
    <string name="add_favorite">Add Favorite</string>

</resources>